# workshops-and-hackathons

./: README.md
advanced/dapp/: index.html
advanced/smart-contract/: Cargo.toml  init-parameter.json
advanced/verifier/: public_key.json
advanced/verifier/src/: main.rs  types.rs
dapp/: index.html  package-lock.json  package.json
smart-contract/: Cargo.toml  init-parameter.json  vote-parameter.json
smart-contract/src/: lib.rs
smart-contract/tests/: tests.rs
voting-workshops-2023/advanced/dapp/: index.html
voting-workshops-2023/advanced/smart-contract/: .gitignore  vote-parameter.json
voting-workshops-2023/advanced/smart-contract/src/: lib.rs
voting-workshops-2023/advanced/verifier/: Cargo.toml  README.md  secret_key.json
voting-workshops-2023/advanced/verifier/src/: handlers.rs
voting-workshops-2023/dapp/: index.html
voting-workshops-2023/smart-contract/: init-parameter.json
voting-workshops-2023/smart-contract/src/: lib.rs
